--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,10 +208,12 @@ input, select, textarea {
 	h1 {
 		font-size: 2.5em;
 		line-height: 1.2;
+		font-weight: bolder;
 	}
 
 	h2 {
 		font-size: 1.5em;
+		font-weight: bold;
 	}
 
 	h3 {
@@ -2374,11 +2376,11 @@ input, select, textarea {
 			display: block;
 		}
 
-		.image.left, .image.right {
-			max-width: 40%;
+		.image.left, .image.right, .image.center {
+			max-width: 30%;
 		}
 
-			.image.left img, .image.right img {
+			.image.left img, .image.right img, .image.center img {
 				width: 100%;
 			}
 
@@ -2391,6 +2393,12 @@ input, select, textarea {
 		.image.right {
 			float: right;
 			margin: 0 0 1em 1.5em;
+			top: 0.25em;
+		}
+
+		.image.center {
+			float: center;
+			margin: 0 0 0 0;
 			top: 0.25em;
 		}
 
